...
        } else {
            return Color(.systemBackground)
        }
    }
    
    private func iconForTitle(_ title: String) -> String {
        if title.contains("Understanding") {
            return "doc.text.magnifyingglass"
        } else if title.contains("Do") {
            return "checklist"
        } else if title.contains("Medications") {
            return "pills"
        } else if title.contains("Timeline") {
...
